2009-03-09  Peter Rosin  <peda@lysator.liu.se>

	* tests/compile2.test: Fix typo.

2009-03-07  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Improve NetBSD 'make -n' output for many standard targets.
	* automake.in (handle_tags): Let .MAKE depend on
	`tags-recursive' and `ctags-recursive' if appropriate.
	(handle_all): Likewise for `all'.
	(do_check_merge_target): Likewise for `check-am' and `check'.
	* lib/am/ansi2knr.am (.MAKE): Depend on %ANSI2KNR-DIR%/ansi2knr.
	* lib/am/install.am [%?maybe_BUILT_SOURCES%] (.MAKE): Depend on
	`install'.
	* tests/maken3.test, tests/maken4.test: New tests.
	* tests/Makefile.am: Update.

	Improve `make -n dist' and `make -n distcheck' for GNU make.
	Ensure that `make -n dist' and `make -n distcheck' do not change
	files, due to GNU make executing rules containing `$(MAKE)'.
	* lib/am/distdir.am (distdir): Separate the creation of
	`$(distdir)/$$subdir' for `$(DIST_SUBDIRS)' and the recursion
	into the `$(DIST_SUBDIRS)' in two separate rule commands.
	(distcheck): Exit recursive rule early when run with `make -n',
	as detected by a witness file.
	* tests/maken.test, tests/maken2.test: New tests.
	* tests/Makefile.am: Update.
	* NEWS: Update.

2009-03-07  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Solaris make testsuite fixes.
	* tests/check10.test: When a rule fails, Solaris make will
	output the complete command that failed; in this case the test
	suite driver.  Adjust the test to not bogusly match lines from
	the driver, rather than its output.
	* tests/distcleancheck.test: Avoid triggering VPATH rewriting,
	not desirable in this test.
	* tests/specflg10.test: Use BUILT_SOURCES to specify an
	intermediate target, so Solaris make knows what to do.

	testsuite: SKIP compile tests if configure found no compiler.
	* tests/depend6.test: configure will exit 77 if AC_PROG_CC found
	no working compiler.  Allow the test to be SKIPped in that case.
	* tests/postproc.test: Likewise.
	* tests/pr243.test: Likewise.