@@ -1,3 +1,12 @@
+2009-03-09  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	Relax depcomp test for MSVC to not require minuso.
+	* m4/depend.m4 (_AM_DEPENDENCIES): When checking the msvisualcpp
+	and msvcmsys depmodes, do not require `-c -o' to work just yet.
+	It is not needed by the depcomp script for these depmodes, and
+	works around the ordering issue between the tests.
+	Report by Peter Rosin.
+
 2009-03-09  Peter Rosin  <peda@lysator.liu.se>
 
 	* tests/compile2.test: Fix typo.
